fix: atualização das rotas de profile, user e feed
